# filters

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  main.c  pyproject.toml
filters/: complementary_filter.py  filter.py  integral.py  madgwick.py  test.py  utils.py
filters/complementary/inc/: complementary.h
filters/complementary/src/: complementary.c
filters/integral/inc/: integral.h
filters/integral/src/: integral.c
filters/madgwick/inc/: madgwick.h
filters/madgwick/src/: madgwick.c
filters/mahony/inc/: mahony.h
filters/mahony/src/: mahony.c
filters/template/inc/: template.h
filters/template/src/: template.c
filters/tilt/inc/: tilt.h
filters/tilt/src/: tilt.c
