[tool.poetry]
name = "filters"
version = "0.1.0"
description = ""
authors = ["Kyle Chen <luckykk273@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
